# godot-ggrs-wrapper

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example/: .gitignore  GGRS.gdns  ggrs.gdnlib  project.godot
example/Scenes/: MainScene.tscn  Player.tscn
example/Scripts/: MainScene.gd  Player.gd  RustPanicHook.gd
src/: ggrs_request_handlers.rs  godotggrs_p2psession.rs  godotggrs_p2pspectatorsession.rs  godotggrs_sessionbuilder.rs  godotggrs_synctest.rs  godotggrs_synctestsession.rs  helper_functions.rs  lib.rs
