[package]
name = "godot-ggrs-wrapper"
version = "0.2.0"
edition = "2018"
authors = ["Marcello Haddeman <haddemanmarcello@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
ggrs = "0.4.4"

[lib]
crate-type = ["cdylib"]