[package]
name = "godot-ggrs-wrapper"
description = "A Rust GDNative project to provide GGRS to the Godot Engine"
version = "0.3.1"
edition = "2018"
readme = "README.md"
authors = ["Marcello Haddeman <haddemanmarcello@gmail.com>"]
repository = "https://github.com/marcello505/godot-ggrs-wrapper"
license-file = "LICENSE"
keywords = ["godot", "gdnative", "gamedev", "networking", "rollback"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"
ggrs = "0.5.0"

[lib]
name = "godot_ggrs_wrapper"
crate-type = ["cdylib"]