[package]
name = "godot-ggrs-wrapper"
description = "A Rust GDNative project to provide GGRS to the Godot Engine"
version = "0.4.0"
edition = "2018"
readme = "README.md"
authors = ["Marcello Haddeman <haddemanmarcello@gmail.com>"]
repository = "https://github.com/marcello505/godot-ggrs-wrapper"
license = "MIT"
keywords = ["godot", "ggrs", "gamedev", "networking", "rollback"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { git = "https://github.com/godot-rust/godot-rust.git", rev = "58fa3b3b00affea5210117cff9b90b029ab512e0", features = ["serde"] }
ggrs = "0.5.0"
bincode = "1.3.3"

[lib]
name = "godot_ggrs_wrapper"
crate-type = ["cdylib"]
